<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/baseline_home_black_24dp"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_deals"
        android:icon="@drawable/baseline_grade_black_24dp"
        android:title="@string/nav_deals" />
    <item
        android:id="@+id/nav_find"
        android:icon="@drawable/baseline_pageview_black_24dp"
        android:title="@string/nav_find" />
    <item
        android:id="@+id/nav_where"
        android:icon="@drawable/baseline_location_city_black_24dp"
        android:title="@string/nav_where" />
    <item
        android:id="@+id/nav_others"
        android:icon="@drawable/baseline_info_black_24dp"
        android:title="@string/nav_others" />
</menu>